# cpusage

./: .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  create_icon.sh  launch_cpusage.sh  performance_info.sh  setup_app.sh
.github/workflows/: rust.yml
src/: main.rs
