[package]
name = "cpusage"
version = "0.1.0"
edition = "2021"

[dependencies]
cocoa = "0.25"
objc = "0.2"
sysinfo = { version = "0.31", default-features = false, features = ["system"] }

[profile.release]
opt-level = "s"        # Optimize for size
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization
panic = "abort"       # Smaller binary size
strip = true          # Remove debug symbols
