[package]
name = "cpusage"
version = "1.2.0"
edition = "2021"

[dependencies]
sysinfo = { version = "0.31", default-features = false, features = ["system"] }
tray-icon = "0.19"
winit = "0.30"
gtk = "0.18"

[profile.release]
opt-level = "s"        # Optimize for size
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization
panic = "abort"       # Smaller binary size
strip = true          # Remove debug symbols
